--- a/.pipeline-config.yaml
+++ b/.pipeline-config.yaml
@@ -72,13 +72,7 @@ release:
   script: |
     #!/usr/bin/env bash
 
-    if [[ "$PIPELINE_DEBUG" == 1 ]]; then
-      trap env EXIT
-      env
-      set -x
-    fi
-
-    source $WORKSPACE/$PIPELINE_CONFIG_REPO_PATH/scripts/release.sh
+    echo "Bypassing this stage"
 
 dynamic-scan:
   image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.46
