--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "csrf": "^3.1.0",
+    "cors": "^2.8.5"
   }
 }
